--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -3,7 +3,7 @@
     gap: 200px;
   }
   .profile-container {
-    max-width: 600px;
+    max-width: 90%;
     margin: 50px auto;
     padding: 20px;
     background-color: #fff;
